[project]
name = "simple_ca"
version = "0.0.1"
description = "OpenSSL wrapper to create your own CA"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Petr Messner", email = "petr.messner@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
]
keywords = ["openssl", "ssl", "ca", "certificate"]
requires-python = ">=3.9"

[dependency-groups]
dev = [
    "pytest",
    "flake8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
