[project]
name = "simple_ca"
version = "0.0.2"
description = "OpenSSL wrapper to create your own CA"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Petr Messner", email = "petr.messner@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
keywords = ["openssl", "ssl", "ca", "certificate"]
requires-python = ">=3.9"

[dependency-groups]
dev = [
    "pytest",
    "flake8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
